force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__BillToTitle__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BillToTitle__c</fullName>
        <defaultValue>&#39;Bill To&#39;</defaultValue>
        <description>Title used for Bill To section. Default value is &quot;Bill To&quot;.</description>
        <inlineHelpText>Title used for Bill To section. Default value is &quot;Bill To&quot;.</inlineHelpText>
        <label>Bill To Title</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>