force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__GroupShadingColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GroupShadingColor__c</fullName>
        <defaultValue>&#39;FFFFFF&#39;</defaultValue>
        <description>Color of the shading for table cells that contain group title and description.</description>
        <inlineHelpText>Color of the shading for table cells that contain group title and description.</inlineHelpText>
        <label>Group Shading Color</label>
        <length>6</length>
        <type>Text</type>
    </CustomField>