force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__RollUpField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RollUpField__c</fullName>
        <description>Field on quote line object that&#39;s used to rollup lines.</description>
        <inlineHelpText>Quote line field used for roll-up. All lines where this field returns the same value will be rolled up into the first line where the value occurs.</inlineHelpText>
        <label>Roll-Up Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>