force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__ShipToTitle__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ShipToTitle__c</fullName>
        <defaultValue>&#39;Ship To&#39;</defaultValue>
        <description>Label used for &quot;Ship To&quot; section. Default value is &quot;Ship To&quot;.</description>
        <inlineHelpText>Label used for &quot;Ship To&quot; section. Default value is &quot;Ship To&quot;.</inlineHelpText>
        <label>Ship To Title</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>