force-app/main/default/objects/SBQQ__QuoteTemplate__c/validationRules/SBQQ__Blank_Footer_Height.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Blank_Footer_Height</fullName>
        <active>true</active>
        <description>Checks if Footer Height is blank if Page Number Position is set to &#39;Footer&#39;.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL(SBQQ__PageNumberPosition__c, &quot;Footer&quot;),
            ISBLANK(SBQQ__FooterHeight__c)), true, null)</errorConditionFormula>
        <errorMessage>Footer Height can not be blank if Page Number Position is set to Footer.</errorMessage>
    </ValidationRule>